feat(backend): add oauth2 state flow, cheer post titles, and storage strategy
strategy
- OAuth2 사용자 데이터를 Redis에 저장하고, 1회용 state 엔드포인트 제공
- 응원 게시글/리포스트에 제목 추가 및 cheer_post 인덱스와 테스트 추가

updates
- 스토리지를 S3 / OCI 전략으로 리팩터링하고 Supabase 옵션 및 설정 업데이트
- Oracle / Sentry / Logstash 의존성 추가, 스키마 초기화, CI 보안 스캔 추가